--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12",
+    "mongoose": "^6.13.3",
     "nodemon": "^2.0.14"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^6.1.1"
   }
 }
